--- a/infocovidmaroc/package.json
+++ b/infocovidmaroc/package.json
@@ -15,11 +15,14 @@
     "@react-navigation/stack": "^5.2.9",
     "react": "16.11.0",
     "react-native": "0.62.1",
+    "react-native-chart-kit": "^5.3.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.4.0"
+    "react-native-screens": "^2.4.0",
+    "react-native-svg": "^12.0.3",
+    "react-native-svg-charts": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
