--- a/infocovidmaroc/package.json
+++ b/infocovidmaroc/package.json
@@ -22,7 +22,9 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-svg": "^12.0.3",
-    "react-native-svg-charts": "^5.3.0"
+    "react-native-svg-charts": "^5.3.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
