--- a/infocovidmaroc/package.json
+++ b/infocovidmaroc/package.json
@@ -13,6 +13,9 @@
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
+    "install": "^0.13.0",
+    "moment": "^2.24.0",
+    "npm": "^6.14.4",
     "react": "16.11.0",
     "react-native": "0.62.1",
     "react-native-chart-kit": "^5.3.0",
@@ -24,7 +27,8 @@
     "react-native-svg": "^12.0.3",
     "react-native-svg-charts": "^5.3.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
